<?xml version="1.0"?>
<package>
  <name>sicks300</name>
  <version>1.0.0</version>
  <description>Driver for the SICK S300 Professional laser scanner</description>
  <author>Dimitri Bohlender</author>
  <maintainer email="dimitri.bohlender@todo.org">Dimitri Bohlender</maintainer>
  <license>GPL</license>
  <url>http://www.ros.org/wiki/sicks300/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>

  </export>

</package>


