<?xml version="1.0"?>
<package>
  <name>sicks300</name>
  <version>1.0.5</version>
  <description>
    Driver for the SICK S300 Professional laser scanner. ROS package for reading continuous data output of the SICK S300 Professional laser scanner via RS-422. Note that it supports both the old (v.1.02) and the new (v.1.03) protocol.

Please note that this is an extension of the original "fuerte" driver
that was developed by the Autonomous Intelligent Systems Department at
Bonn University.
  </description>
  <author>Dimitri Bohlender</author>
  <maintainer email="dimitri.bohlender@todo.org">Dimitri Bohlender</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>GPL</license>
  <url>http://www.ros.org/wiki/sicks300/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>

  </export>

</package>


